--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
     <script type="module" src="main.js"></script>
     <script type="module" src="customApi.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <script type="text/javascript" src="/node_modules//sweetalert2/dist/sweetalert2.all.js"></script>
+    <script type="text/javascript" src="./node_modules//sweetalert2/dist/sweetalert2.all.js"></script>
   </body>
 </html>
